tests/ui/recurse.stderr
error[E0597]: `tag` does not live long enough
  --> $DIR/recurse.rs:6:5
   |
5  | fn recursive(idx: Option<Idx8<'_>>) {
   |              --- has type `std::option::Option<compact_arena::Idx<'1, u8>>`
6  |     mk_nano_arena!(arena); // `tag` does not live long enough
   |     ^^^^^^^^^^^^^^^^^^^^^^
   |     |
   |     borrowed value does not live long enough
   |     argument requires that `tag` is borrowed for `'1`
...
12 | }
   | - `tag` dropped here while still borrowed
   |
   = note: this error originates in a macro outside of the current crate (in Nightly builds, run with -Z external-macro-backtrace for more info)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0597`.
